--- a/TSSP.web/static/stuStatic/static/css/index.css
+++ b/TSSP.web/static/stuStatic/static/css/index.css
@@ -10,7 +10,11 @@
 body{background: #FFF;}
 
 /** 首页 */
-
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /*导航部分*/
 .nav{width: 100%; height: 80px; box-shadow: 0 3px 3px 0 #CCC; background: #FFF; position: fixed; left: 0; top: 0; z-index: 999; overflow: hidden; transition: 0.3s}
 .nav.index{background: rgba(255, 255, 255 ,0.8); box-shadow: 0 0 0 0 rgba(0,0,0,0.05);}
